# pointer

./: .eslintrc.js  .gitignore  README.md  instrumentation-client.ts  jest.config.js  jest.setup.js  middleware.ts  next.config.ts  package-lock.json  package.json  vitest.config.ts  vitest.convex.config.ts  vitest.setup.ts
.github/: pull_request_template.md
.letta/: settings.json  settings.local.json
__tests__/: README.md  highlight-colors.test.ts
__tests__/helpers/: tree-constants.ts
__tests__/lib/: mock-data.test.ts  tiptap-utils.test.ts  tree-utils.test.ts  utils.test.ts
convex/: auth.ts  crons.ts  graph.ts  http.ts  imageReferences.ts  image_references.ts  migration.ts  noteVersions.ts  notes.ts  notesContent.ts  schema.ts  shared.ts  taskManagement.ts  whiteboards.ts
convex/__tests__/: noteVersions.test.ts  taskManagement.test.ts  whiteboards.test.ts
convex/_generated/: api.d.ts
partykit/: .gitignore  .partykitignore  partykit.json  server.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  mongo.rs  tts.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AutoSaveProvider.tsx  CommandMenuProvider.tsx  DebugPanel.tsx  DevTools.tsx  ErrorBoundary.tsx  ExcalidrawWrapper.tsx  NoteEditor.tsx  sidebar.tsx  theme-toggle.tsx
src/contexts/: EditorContext.tsx
src/hooks/: use-connection-manager.ts  use-folder-operations.ts  use-note-content.ts  use-note-editor.ts  use-notes-api.ts  use-reconnection-manager.ts  use-save-coordinator.ts  use-task-manager.ts  use-voice-recorder.ts  (+4 more)
(+159 files in other folders)
